<resources>
    <string name="app_name">i210637</string>
    <string name="country_prompt">Select Country</string>
    <string name="city_prompt">Select City</string>
    <string name="connect_ask_learn">connect.ask.learn</string>
    <string name="me">me</string>
    <string name="mentor">mentor</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="login">Login</string>
    <string name="forgot_your_password">Forgot Your Password?</string>
    <string name="password">Password</string>
    <string name="passwordd">Password</string>
    <string name="emaill">Email</string>
    <string name="loginn">Login</string>
    <string name="emailkk">Email</string>
    <string name="back_arrow_description">xs</string>
    <string name="reset_password">Reset Password</string>
    <string name="back">back\n</string>
    <string name="john_cooper">John Cooper</string>
</resources>