<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".page2Login">

    <!-- View that takes 2/3 of the screen -->
    <FrameLayout

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="@drawable/button_round">
        <ImageView
            android:id="@+id/circleTop"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="-100dp"
            android:alpha="0.5"
            android:background="@drawable/circle" />

        <!-- Second Circle (Touching Left) -->
        <ImageView
            android:id="@+id/circleLeft"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="-60dp"
            android:alpha="0.5"
            android:background="@drawable/circle" />

        <LinearLayout
            android:id="@+id/textContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="200dp"
            android:layout_marginLeft="100dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewMentor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="mentor"
                android:fontFamily="@font/acme"
                android:textColor="#2EA7AE"
                android:textSize="44sp" />

            <TextView
                android:id="@+id/textViewMe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/acme"
                android:text="me"
                android:textColor="#FFC90A"
                android:textSize="44sp" />
        </LinearLayout>


    </FrameLayout>

    <!-- View that takes 1/3 of the screen -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:background="#50C2C9">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="444dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loginn"
                android:textColor="@color/white"
                android:textSize="36sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/emailkk"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"/>
            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="370dp"
                android:layout_height="48dp"
                android:layout_marginTop="0dp"
                android:hint="@string/emaill"
                android:background="@drawable/button_round"
                android:inputType="textEmailAddress"
                android:padding="12dp" />


            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/passwordd"
                android:textColor="@color/white"
                android:textSize="20dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp">

                <EditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_below="@id/editTextEmail"
                    android:layout_marginTop="0dp"
                    android:hint="@string/password"
                    android:background="@drawable/button_round"
                    android:inputType="textPassword"
                    android:padding="12dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="20dp"
                android:text="@string/forgot_your_password"
                android:textColor="@color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <Button
                    android:id="@+id/loginButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/button_round"
                    android:paddingStart="60dp"
                    android:paddingTop="5dp"
                    android:paddingEnd="60dp"
                    android:paddingBottom="5dp"
                    android:text="@string/login"
                    android:textColor="#23B39D"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="40dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/donthave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/don_t_have_an_account" />

                <TextView
                    android:id="@+id/Signup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#157177"
                    android:text="@string/sign_up"
                    android:layout_marginStart="5dp"/>
            </LinearLayout>

        </LinearLayout>



    </FrameLayout>

</LinearLayout>
