<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:ignore="MissingClass">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:background="#def8f8">

        <!-- Second Circle (Touching Left) -->

        <ImageView
            android:id="@+id/circleTop"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="-100dp"
            android:alpha="0.5"
            android:background="@drawable/circle" />

        <!-- Second Circle (Touching Left) -->
        <ImageView
            android:id="@+id/circleLeft"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="-70dp"
            android:alpha="0.5"
            android:background="@drawable/circle" />

        <LinearLayout
            android:id="@+id/textContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewMentor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mentor"
                android:fontFamily="@font/acme"
                android:textColor="#1F939A"
                android:textSize="48sp" />

            <TextView
                android:id="@+id/textViewMe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/me"
                android:fontFamily="@font/acme"
                android:textColor="#E1CDA103"
                android:textSize="48sp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textContainer"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:text="@string/connect_ask_learn"
            android:textColor="#1F939A"
            />



    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
